--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "2.39.8",
     "@tremor/react": "^3.14.1",
     "clsx": "2.1.0",
+    "immer": "^10.0.4",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
