--- a/package.json
+++ b/package.json
@@ -9,18 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@headlessui/tailwindcss": "^0.2.0",
-    "@remixicon/react": "^4.2.0",
+    "@material-tailwind/react": "^2.1.9",
     "@supabase/ssr": "0.1.0",
     "@supabase/supabase-js": "2.39.8",
-    "@tremor/react": "^3.14.1",
-    "clsx": "2.1.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.8.0",
     "immer": "^10.0.4",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "2.2.2",
+    "react-icons": "^5.0.1",
     "zod": "3.22.4",
     "zustand": "4.5.2"
   },
