--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
     "@supabase/ssr": "0.1.0",
     "@supabase/supabase-js": "2.39.8",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.8.0",
     "immer": "^10.0.4",
+    "lucide-react": "^0.366.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "zod": "3.22.4",
+    "react-hook-form": "^7.51.2",
+    "zod": "^3.22.4",
     "zustand": "4.5.2"
   },
   "devDependencies": {
